--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dexie": "^4.0.8",
     "dexie-react-hooks": "^1.1.7",
     "firebase": "^10.12.4",
+    "firebase-admin": "^12.2.0",
     "get-photo-url": "^1.0.3",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
